# ChangeLog for media-gfx/exiv2
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiv2/ChangeLog,v 1.13 2006/11/27 16:01:17 flameeyes Exp $

  27 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> exiv2-0.11.ebuild:
  Add ~x86-fbsd keyword.

  27 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> exiv2-0.11.ebuild:
  Convert iconv to a more portable syntax, and add virtual/libiconv dependency
  at buildtime for the iconv command.

  17 Oct 2006; Stefan Briesenick <sbriesen@gentoo.org> exiv2-0.9.1.ebuild,
  exiv2-0.10-r1.ebuild, exiv2-0.11.ebuild:
  added missing zlib dependency, solving bug #151708.

*exiv2-0.11 (01 Oct 2006)

  01 Oct 2006; Stefan Briesenick <sbriesen@gentoo.org> +exiv2-0.11.ebuild:
  version bump

  31 Aug 2006; <blubb@gentoo.org> exiv2-0.9.1.ebuild:
  stable on amd64

  30 Aug 2006; Joshua Jackson <tsunam@gentoo.org> exiv2-0.9.1.ebuild:
  stable x86; for kphotoalbum #145102

  29 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org> exiv2-0.9.1.ebuild:
  ppc stable

  26 Aug 2006; Jason Wever <weeve@gentoo.org> exiv2-0.9.1.ebuild:
  Stable on SPARC wrt bug #145102.

*exiv2-0.10-r1 (18 Aug 2006)

  18 Aug 2006; Stefan Briesenick <sbriesen@gentoo.org>
  +files/exiv2-0.10-jpgimage.diff, -exiv2-0.10.ebuild,
  +exiv2-0.10-r1.ebuild:
  adding patch for crash in jpgimage.cpp, solving bug #144347.

*exiv2-0.10 (05 Jun 2006)

  05 Jun 2006; Stefan Briesenick <sbriesen@gentoo.org> +exiv2-0.10.ebuild:
  version bump, solving bug #135502.

  28 Apr 2006; Jason Wever <weeve@gentoo.org> exiv2-0.9.1.ebuild:
  Added ~sparc keyword wrt bug #130648.

  21 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org> exiv2-0.9.1.ebuild:
  Added to ~ppc

*exiv2-0.9.1 (22 Mar 2006)

  22 Mar 2006; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +exiv2-0.9.1.ebuild:
  initial commit, solving bug #109690.
