@@ -1,0 +1,3 @@
+MD5 a97a4e489df7ec99458e3e33b506c3e6 exiv2-0.12.tar.gz 2359138
+RMD160 456eafab758af27277b3c086fd280ef3976e97dc exiv2-0.12.tar.gz 2359138
+SHA256 ebc67d942580731002206ffcbf4b279384d029085262e285150695591a1fa0ab exiv2-0.12.tar.gz 2359138
